// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing analytics sale chart component Should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tremor-Card-root relative w-full text-left rounded-tremor-default ring-tremor-ring shadow-tremor-card dark:ring-dark-tremor-ring dark:shadow-dark-tremor-card border-tremor-brand dark:border-dark-tremor-brand h-full bg-tremor-primary dark:bg-dark-tremor-primary p-0 border-none ring-0"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center"
        >
          <div
            class="tremor-Flex-root flex flex-row items-center absolute -top-4 left-6 w-16 h-16 p-1 shadow-md bg-[linear-gradient(195deg,_#66BB6A,_#43A047)] justify-center rounded-xl text-2xl text-white"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95a15.65 15.65 0 00-1.38-3.56A8.03 8.03 0 0118.92 8zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56A7.987 7.987 0 015.08 16zm2.95-8H5.08a7.987 7.987 0 014.33-3.56A15.65 15.65 0 008.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95a8.03 8.03 0 01-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
              />
            </svg>
          </div>
          <div
            class="tremor-Flex-root flex w-full flex-col items-start justify-start mt-4 ml-[6.5rem]"
          >
            <p
              class="text-tremor-title text-lg font-bold text-primary dark:text-dark-primary tracking-[0.0075em]"
            >
              Sales by Country
            </p>
          </div>
        </div>
        <div
          class="tremor-Flex-root flex w-full justify-between items-center relative mt-6 md:mt-0 py-0 flex-col md:flex-row px-4 md:py-5"
        >
          <div
            class="tremor-Flex-root flex w-full flex-col items-start justify-start mb-6 lg:mb-0"
          >
            <div
              class="tremor-Flex-root flex w-full flex-row items-start justify-start border-0 border-b border-gray-100 last:border-transparent"
            >
              <div
                class="tremor-Table-root overflow-auto w-full"
              >
                <table
                  class="tremor-Table-table w-full tabular-nums text-tremor-default text-tremor-content dark:text-dark-tremor-content"
                >
                  <tbody
                    class="tremor-TableBody-root align-top overflow-x-auto divide-y divide-tremor-border dark:divide-dark-tremor-border last-child:border-black"
                  >
                    <tr
                      class="tremor-TableRow-row border-solid"
                    >
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                      >
                        <div
                          class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                        >
                          <img
                            alt="United State"
                            data-nimg="1"
                            decoding="async"
                            fetchpriority="high"
                            height="18"
                            src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=48&q=75"
                            srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=48&q=75 2x"
                            style="color: transparent;"
                            width="24"
                          />
                          <div
                            class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                          >
                            <p
                              class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                            >
                              Country:
                            </p>
                            <p
                              class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                            >
                              United State
                            </p>
                          </div>
                        </div>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Sales:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          2.500
                        </p>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Value:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                        >
                          <span>
                            $230.900
                          </span>
                        </p>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Bounce:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          <span>
                            29.9
                            %
                          </span>
                        </p>
                      </td>
                    </tr>
                    <tr
                      class="tremor-TableRow-row border-solid"
                    >
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                      >
                        <div
                          class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                        >
                          <img
                            alt="Germany"
                            data-nimg="1"
                            decoding="async"
                            fetchpriority="high"
                            height="18"
                            src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=48&q=75"
                            srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=48&q=75 2x"
                            style="color: transparent;"
                            width="24"
                          />
                          <div
                            class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                          >
                            <p
                              class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                            >
                              Country:
                            </p>
                            <p
                              class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                            >
                              Germany
                            </p>
                          </div>
                        </div>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Sales:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          3.900
                        </p>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Value:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                        >
                          <span>
                            $440.000
                          </span>
                        </p>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Bounce:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          <span>
                            40.22
                            %
                          </span>
                        </p>
                      </td>
                    </tr>
                    <tr
                      class="tremor-TableRow-row border-solid"
                    >
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                      >
                        <div
                          class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                        >
                          <img
                            alt="Great Britain"
                            data-nimg="1"
                            decoding="async"
                            fetchpriority="high"
                            height="18"
                            src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=48&q=75"
                            srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=48&q=75 2x"
                            style="color: transparent;"
                            width="24"
                          />
                          <div
                            class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                          >
                            <p
                              class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                            >
                              Country:
                            </p>
                            <p
                              class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                            >
                              Great Britain
                            </p>
                          </div>
                        </div>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Sales:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          1.400
                        </p>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Value:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                        >
                          <span>
                            $190.700
                          </span>
                        </p>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Bounce:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          <span>
                            23.44
                            %
                          </span>
                        </p>
                      </td>
                    </tr>
                    <tr
                      class="tremor-TableRow-row border-solid"
                    >
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                      >
                        <div
                          class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                        >
                          <img
                            alt="Brasil"
                            data-nimg="1"
                            decoding="async"
                            fetchpriority="high"
                            height="18"
                            src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=48&q=75"
                            srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=48&q=75 2x"
                            style="color: transparent;"
                            width="24"
                          />
                          <div
                            class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                          >
                            <p
                              class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                            >
                              Country:
                            </p>
                            <p
                              class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                            >
                              Brasil
                            </p>
                          </div>
                        </div>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Sales:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          562
                        </p>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Value:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                        >
                          <span>
                            $143.960
                          </span>
                        </p>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Bounce:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          <span>
                            32.14
                            %
                          </span>
                        </p>
                      </td>
                    </tr>
                    <tr
                      class="tremor-TableRow-row border-solid"
                    >
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                      >
                        <div
                          class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                        >
                          <img
                            alt="Australia"
                            data-nimg="1"
                            decoding="async"
                            fetchpriority="high"
                            height="18"
                            src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=48&q=75"
                            srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=48&q=75 2x"
                            style="color: transparent;"
                            width="24"
                          />
                          <div
                            class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                          >
                            <p
                              class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                            >
                              Country:
                            </p>
                            <p
                              class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                            >
                              Australia
                            </p>
                          </div>
                        </div>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Sales:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          400
                        </p>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Value:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                        >
                          <span>
                            $143.960
                          </span>
                        </p>
                      </td>
                      <td
                        class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                        >
                          Bounce:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          <span>
                            56.83
                            %
                          </span>
                        </p>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <div
            class="tremor-Flex-root flex w-full flex-row items-center justify-center pb-6 px-16 md:p-0 map"
          >
            <img
              alt="chart"
              class="mt-0 lg:-mt-10"
              data-nimg="1"
              decoding="async"
              fetchpriority="high"
              height="250"
              src="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-sales-chart.webp&w=828&q=75"
              srcset="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-sales-chart.webp&w=384&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-sales-chart.webp&w=828&q=75 2x"
              style="color: transparent;"
              width="380"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tremor-Card-root relative w-full text-left rounded-tremor-default ring-tremor-ring shadow-tremor-card dark:ring-dark-tremor-ring dark:shadow-dark-tremor-card border-tremor-brand dark:border-dark-tremor-brand h-full bg-tremor-primary dark:bg-dark-tremor-primary p-0 border-none ring-0"
    >
      <div
        class="tremor-Flex-root flex w-full flex-row justify-between items-center"
      >
        <div
          class="tremor-Flex-root flex flex-row items-center absolute -top-4 left-6 w-16 h-16 p-1 shadow-md bg-[linear-gradient(195deg,_#66BB6A,_#43A047)] justify-center rounded-xl text-2xl text-white"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95a15.65 15.65 0 00-1.38-3.56A8.03 8.03 0 0118.92 8zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56A7.987 7.987 0 015.08 16zm2.95-8H5.08a7.987 7.987 0 014.33-3.56A15.65 15.65 0 008.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95a8.03 8.03 0 01-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
            />
          </svg>
        </div>
        <div
          class="tremor-Flex-root flex w-full flex-col items-start justify-start mt-4 ml-[6.5rem]"
        >
          <p
            class="text-tremor-title text-lg font-bold text-primary dark:text-dark-primary tracking-[0.0075em]"
          >
            Sales by Country
          </p>
        </div>
      </div>
      <div
        class="tremor-Flex-root flex w-full justify-between items-center relative mt-6 md:mt-0 py-0 flex-col md:flex-row px-4 md:py-5"
      >
        <div
          class="tremor-Flex-root flex w-full flex-col items-start justify-start mb-6 lg:mb-0"
        >
          <div
            class="tremor-Flex-root flex w-full flex-row items-start justify-start border-0 border-b border-gray-100 last:border-transparent"
          >
            <div
              class="tremor-Table-root overflow-auto w-full"
            >
              <table
                class="tremor-Table-table w-full tabular-nums text-tremor-default text-tremor-content dark:text-dark-tremor-content"
              >
                <tbody
                  class="tremor-TableBody-root align-top overflow-x-auto divide-y divide-tremor-border dark:divide-dark-tremor-border last-child:border-black"
                >
                  <tr
                    class="tremor-TableRow-row border-solid"
                  >
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                    >
                      <div
                        class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                      >
                        <img
                          alt="United State"
                          data-nimg="1"
                          decoding="async"
                          fetchpriority="high"
                          height="18"
                          src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=48&q=75"
                          srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=48&q=75 2x"
                          style="color: transparent;"
                          width="24"
                        />
                        <div
                          class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                        >
                          <p
                            class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                          >
                            Country:
                          </p>
                          <p
                            class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                          >
                            United State
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Sales:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                      >
                        2.500
                      </p>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Value:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                      >
                        <span>
                          $230.900
                        </span>
                      </p>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Bounce:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                      >
                        <span>
                          29.9
                          %
                        </span>
                      </p>
                    </td>
                  </tr>
                  <tr
                    class="tremor-TableRow-row border-solid"
                  >
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                    >
                      <div
                        class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                      >
                        <img
                          alt="Germany"
                          data-nimg="1"
                          decoding="async"
                          fetchpriority="high"
                          height="18"
                          src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=48&q=75"
                          srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=48&q=75 2x"
                          style="color: transparent;"
                          width="24"
                        />
                        <div
                          class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                        >
                          <p
                            class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                          >
                            Country:
                          </p>
                          <p
                            class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                          >
                            Germany
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Sales:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                      >
                        3.900
                      </p>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Value:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                      >
                        <span>
                          $440.000
                        </span>
                      </p>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Bounce:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                      >
                        <span>
                          40.22
                          %
                        </span>
                      </p>
                    </td>
                  </tr>
                  <tr
                    class="tremor-TableRow-row border-solid"
                  >
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                    >
                      <div
                        class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                      >
                        <img
                          alt="Great Britain"
                          data-nimg="1"
                          decoding="async"
                          fetchpriority="high"
                          height="18"
                          src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=48&q=75"
                          srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=48&q=75 2x"
                          style="color: transparent;"
                          width="24"
                        />
                        <div
                          class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                        >
                          <p
                            class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                          >
                            Country:
                          </p>
                          <p
                            class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                          >
                            Great Britain
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Sales:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                      >
                        1.400
                      </p>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Value:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                      >
                        <span>
                          $190.700
                        </span>
                      </p>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Bounce:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                      >
                        <span>
                          23.44
                          %
                        </span>
                      </p>
                    </td>
                  </tr>
                  <tr
                    class="tremor-TableRow-row border-solid"
                  >
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                    >
                      <div
                        class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                      >
                        <img
                          alt="Brasil"
                          data-nimg="1"
                          decoding="async"
                          fetchpriority="high"
                          height="18"
                          src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=48&q=75"
                          srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=48&q=75 2x"
                          style="color: transparent;"
                          width="24"
                        />
                        <div
                          class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                        >
                          <p
                            class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                          >
                            Country:
                          </p>
                          <p
                            class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                          >
                            Brasil
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Sales:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                      >
                        562
                      </p>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Value:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                      >
                        <span>
                          $143.960
                        </span>
                      </p>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Bounce:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                      >
                        <span>
                          32.14
                          %
                        </span>
                      </p>
                    </td>
                  </tr>
                  <tr
                    class="tremor-TableRow-row border-solid"
                  >
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                    >
                      <div
                        class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                      >
                        <img
                          alt="Australia"
                          data-nimg="1"
                          decoding="async"
                          fetchpriority="high"
                          height="18"
                          src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=48&q=75"
                          srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=48&q=75 2x"
                          style="color: transparent;"
                          width="24"
                        />
                        <div
                          class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                        >
                          <p
                            class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                          >
                            Country:
                          </p>
                          <p
                            class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                          >
                            Australia
                          </p>
                        </div>
                      </div>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Sales:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                      >
                        400
                      </p>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Value:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                      >
                        <span>
                          $143.960
                        </span>
                      </p>
                    </td>
                    <td
                      class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                    >
                      <p
                        class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                      >
                        Bounce:
                      </p>
                      <p
                        class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                      >
                        <span>
                          56.83
                          %
                        </span>
                      </p>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div
          class="tremor-Flex-root flex w-full flex-row items-center justify-center pb-6 px-16 md:p-0 map"
        >
          <img
            alt="chart"
            class="mt-0 lg:-mt-10"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="250"
            src="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-sales-chart.webp&w=828&q=75"
            srcset="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-sales-chart.webp&w=384&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-sales-chart.webp&w=828&q=75 2x"
            style="color: transparent;"
            width="380"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing analytics sale chart component testing component analytics sales card not render when isAnalytics is false 1`] = `
<div>
  <div
    class="tremor-Card-root relative w-full text-left rounded-tremor-default ring-tremor-ring shadow-tremor-card dark:ring-dark-tremor-ring dark:shadow-dark-tremor-card border-tremor-brand dark:border-dark-tremor-brand h-full bg-tremor-primary dark:bg-dark-tremor-primary p-0 border-none ring-0"
  >
    <div
      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
    >
      <div
        class="tremor-Flex-root flex w-full flex-col items-start justify-start mt-4 ml-4"
      >
        <p
          class="text-tremor-title text-lg font-bold text-primary dark:text-dark-primary tracking-[0.0075em]"
        >
          Sales by Country
        </p>
      </div>
    </div>
    <div
      class="tremor-Flex-root flex w-full justify-between items-center relative mt-6 md:mt-0 py-0 flex-col md:flex-row px-0 md:py-4"
    >
      <div
        class="tremor-Flex-root flex w-full flex-col items-start justify-start mb-6 lg:mb-0"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row items-start justify-start border-0 border-b border-gray-100 last:border-transparent"
        >
          <div
            class="tremor-Table-root overflow-auto w-full"
          >
            <table
              class="tremor-Table-table w-full tabular-nums text-tremor-default text-tremor-content dark:text-dark-tremor-content"
            >
              <tbody
                class="tremor-TableBody-root align-top overflow-x-auto divide-y divide-tremor-border dark:divide-dark-tremor-border last-child:border-black"
              >
                <tr
                  class="tremor-TableRow-row border-solid"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <img
                        alt="United State"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="18"
                        src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=48&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=48&q=75 2x"
                        style="color: transparent;"
                        width="24"
                      />
                      <div
                        class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                        >
                          Country:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          United State
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Sales:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      2.500
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce false"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Bounce:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      <span>
                        29.9
                        %
                      </span>
                    </p>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-solid"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <img
                        alt="Germany"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="18"
                        src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=48&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=48&q=75 2x"
                        style="color: transparent;"
                        width="24"
                      />
                      <div
                        class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                        >
                          Country:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          Germany
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Sales:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      3.900
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce false"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Bounce:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      <span>
                        40.22
                        %
                      </span>
                    </p>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-solid"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <img
                        alt="Great Britain"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="18"
                        src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=48&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=48&q=75 2x"
                        style="color: transparent;"
                        width="24"
                      />
                      <div
                        class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                        >
                          Country:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          Great Britain
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Sales:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      1.400
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce false"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Bounce:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      <span>
                        23.44
                        %
                      </span>
                    </p>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-solid"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <img
                        alt="Brasil"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="18"
                        src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=48&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=48&q=75 2x"
                        style="color: transparent;"
                        width="24"
                      />
                      <div
                        class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                        >
                          Country:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          Brasil
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Sales:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      562
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce false"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Bounce:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      <span>
                        32.14
                        %
                      </span>
                    </p>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-solid"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <img
                        alt="Australia"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="18"
                        src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=48&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=48&q=75 2x"
                        style="color: transparent;"
                        width="24"
                      />
                      <div
                        class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                        >
                          Country:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          Australia
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Sales:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      400
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce false"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Bounce:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      <span>
                        56.83
                        %
                      </span>
                    </p>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing analytics sale chart component testing component analytics sales card render when isAnalytics is false 1`] = `
<div>
  <div
    class="tremor-Card-root relative w-full text-left rounded-tremor-default ring-tremor-ring shadow-tremor-card dark:ring-dark-tremor-ring dark:shadow-dark-tremor-card border-tremor-brand dark:border-dark-tremor-brand h-full bg-tremor-primary dark:bg-dark-tremor-primary p-0 border-none ring-0"
  >
    <div
      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
    >
      <div
        class="tremor-Flex-root flex flex-row items-center absolute -top-4 left-6 w-16 h-16 p-1 shadow-md bg-[linear-gradient(195deg,_#66BB6A,_#43A047)] justify-center rounded-xl text-2xl text-white"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95a15.65 15.65 0 00-1.38-3.56A8.03 8.03 0 0118.92 8zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56A7.987 7.987 0 015.08 16zm2.95-8H5.08a7.987 7.987 0 014.33-3.56A15.65 15.65 0 008.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95a8.03 8.03 0 01-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
          />
        </svg>
      </div>
      <div
        class="tremor-Flex-root flex w-full flex-col items-start justify-start mt-4 ml-[6.5rem]"
      >
        <p
          class="text-tremor-title text-lg font-bold text-primary dark:text-dark-primary tracking-[0.0075em]"
        >
          Sales by Country
        </p>
      </div>
    </div>
    <div
      class="tremor-Flex-root flex w-full justify-between items-center relative mt-6 md:mt-0 py-0 flex-col md:flex-row px-4 md:py-5"
    >
      <div
        class="tremor-Flex-root flex w-full flex-col items-start justify-start mb-6 lg:mb-0"
      >
        <div
          class="tremor-Flex-root flex w-full flex-row items-start justify-start border-0 border-b border-gray-100 last:border-transparent"
        >
          <div
            class="tremor-Table-root overflow-auto w-full"
          >
            <table
              class="tremor-Table-table w-full tabular-nums text-tremor-default text-tremor-content dark:text-dark-tremor-content"
            >
              <tbody
                class="tremor-TableBody-root align-top overflow-x-auto divide-y divide-tremor-border dark:divide-dark-tremor-border last-child:border-black"
              >
                <tr
                  class="tremor-TableRow-row border-solid"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <img
                        alt="United State"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="18"
                        src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=48&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FUS.webp&w=48&q=75 2x"
                        style="color: transparent;"
                        width="24"
                      />
                      <div
                        class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                        >
                          Country:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          United State
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Sales:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      2.500
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Value:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                    >
                      <span>
                        $230.900
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Bounce:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      <span>
                        29.9
                        %
                      </span>
                    </p>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-solid"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <img
                        alt="Germany"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="18"
                        src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=48&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FDE.webp&w=48&q=75 2x"
                        style="color: transparent;"
                        width="24"
                      />
                      <div
                        class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                        >
                          Country:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          Germany
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Sales:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      3.900
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Value:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                    >
                      <span>
                        $440.000
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Bounce:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      <span>
                        40.22
                        %
                      </span>
                    </p>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-solid"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <img
                        alt="Great Britain"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="18"
                        src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=48&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FGB.webp&w=48&q=75 2x"
                        style="color: transparent;"
                        width="24"
                      />
                      <div
                        class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                        >
                          Country:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          Great Britain
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Sales:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      1.400
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Value:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                    >
                      <span>
                        $190.700
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Bounce:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      <span>
                        23.44
                        %
                      </span>
                    </p>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-solid"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <img
                        alt="Brasil"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="18"
                        src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=48&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FBR.webp&w=48&q=75 2x"
                        style="color: transparent;"
                        width="24"
                      />
                      <div
                        class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                        >
                          Country:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          Brasil
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Sales:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      562
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Value:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                    >
                      <span>
                        $143.960
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Bounce:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      <span>
                        32.14
                        %
                      </span>
                    </p>
                  </td>
                </tr>
                <tr
                  class="tremor-TableRow-row border-solid"
                >
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums text-left p-4 px-4 py-3 w-6/12 sm:w-[30%] border-gray-500"
                  >
                    <div
                      class="tremor-Flex-root flex w-full flex-row justify-between items-center"
                    >
                      <img
                        alt="Australia"
                        data-nimg="1"
                        decoding="async"
                        fetchpriority="high"
                        height="18"
                        src="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=48&q=75"
                        srcset="/_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=32&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fflags%2FAU.webp&w=48&q=75 2x"
                        style="color: transparent;"
                        width="24"
                      />
                      <div
                        class="tremor-Flex-root flex w-full justify-between items-start flex-col ml-6"
                      >
                        <p
                          class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25] tracking-[0.03333em]"
                        >
                          Country:
                        </p>
                        <p
                          class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                        >
                          Australia
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Sales:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      400
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center value"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Value:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title m-auto leading-[1.5] truncate max-w-[60px] xs:max-w-[70px] xl:max-w-[105px]"
                    >
                      <span>
                        $143.960
                      </span>
                    </p>
                  </td>
                  <td
                    class="tremor-TableCell-root align-middle whitespace-nowrap tabular-nums p-4 px-4 py-3 text-center bounce hidden md:table-cell"
                  >
                    <p
                      class="text-tremor-default text-tremor-content text-xs dark:text-dark-romance font-semibold leading-[1.25]"
                    >
                      Bounce:
                    </p>
                    <p
                      class="text-tremor-default text-tremor-content-title dark:text-dark-tremor-content-title leading-[1.5]"
                    >
                      <span>
                        56.83
                        %
                      </span>
                    </p>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="tremor-Flex-root flex w-full flex-row items-center justify-center pb-6 px-16 md:p-0 map"
      >
        <img
          alt="chart"
          class="mt-0 lg:-mt-10"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="250"
          src="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-sales-chart.webp&w=828&q=75"
          srcset="/_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-sales-chart.webp&w=384&q=75 1x, /_next/image?url=%2Fassets%2Fimages%2Fanalytics%2Fanalytics-sales-chart.webp&w=828&q=75 2x"
          style="color: transparent;"
          width="380"
        />
      </div>
    </div>
  </div>
</div>
`;
